--- a/backend/backend/backend/backend/requirements.txt
+++ b/backend/backend/backend/backend/requirements.txt
@@ -1,1 +1,11 @@
 backend/requirements.txt
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+pydantic==2.7.3
+sqlmodel==0.0.18
+psycopg2-binary==2.9.9
+alembic==1.13.1
+python-dotenv==1.0.1
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.9
+requests==2.32.3
